<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemoryMockup</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_id">IDActivity</string>
    <string name="id_instructions">Please enter your Andrew ID below.</string>
    <string name="enter_id_hint">Enter your Andrew ID here.</string>
    <string name="start">Start</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title">The Memory Palace</string>
    <string name="impossible">Impossible Space</string>
    <string name="non_impossible">Non-impossible Space</string>
    <string name="title_activity_setup">SetupActivity</string>
    <string name="match">Match</string>
    <string name="entry">Enter</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>
    <string name="random">Random</string>
    <string name="prompt">Prompt</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="input_method">Input Method</string>
    <string name="input_method_slow">Slow</string>
    <string name="input_method_fast">Fast</string>
    <string name="reset">Reset</string>
    <string name="enter_path_hint">Enter the name of the path.</string>
    <string name="exit">Exit</string>

</resources>
