<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_instructions"
        android:textSize="20sp" />
    
    <EditText
        android:id="@+id/enter_id"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:singleLine="true"
	    android:hint="@string/enter_id_hint" />
     
    <Button
	    android:layout_height="wrap_content"
	    android:layout_width="300dp"
	    android:layout_marginTop="10dp"
	    android:text="@string/start"
	    android:onClick="startStart" />

</LinearLayout>
